add header message

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
             <img src="./img/drake.png" alt="praying hands logo" class="pray">
         </div>
     </div>
-    <div class="form-column">TEST2</div>
+    <div class="form-column">
+        <div class="row">
+            <h2 class="sign-up-header">This is not a real service!
+                Registering will improve your life!
+                Sign up today, and watch your dreams come true!
+            </h2>
+        </div>
+        <div class="row mid">MID</div>
+        <div class="row">BOTTOM</div>
+    </div>
 </body>
 </html>
