--- a/index.html
+++ b/index.html
@@ -15,14 +15,27 @@
         </div>
     </div>
     <div class="form-column">
-        <div class="row">
-            <h2 class="sign-up-header">This is not a real service!
-                Registering will improve your life!
-                Sign up today, and watch your dreams come true!
-            </h2>
+        <div class="row top">
+            <h2>This isn't a real service! But sign up regardless!</h2>
         </div>
-        <div class="row mid">MID</div>
-        <div class="row">BOTTOM</div>
+        <div class="row mid">
+            <h2>Registration</h2>
+            <form action="" method="post">
+
+                <div class="form-row">
+                    <div class="form-col">
+                        <label for="first-name">First name:</label>
+                        <input type="text" id="first-name" name="firstName">
+                    </div>
+                    <div class="form-col">
+                        <label for="last-name">Last name:</label>
+                        <input type="text" id="last-name" name="lastName">
+                    </div>
+                </div>
+
+            </form>
+        </div>
+        <div class="row">3</div>
     </div>
 </body>
 </html>
