--- a/index.html
+++ b/index.html
@@ -25,13 +25,37 @@
                 <div class="form-row">
                     <div class="form-col">
                         <label for="first-name">First name:</label>
-                        <input type="text" id="first-name" name="firstName">
+                        <input type="text" id="first-name" name="firstName" placeholder="John" required>
                     </div>
                     <div class="form-col">
                         <label for="last-name">Last name:</label>
-                        <input type="text" id="last-name" name="lastName">
+                        <input type="text" id="last-name" name="lastName" placeholder="Smith" required>
                     </div>
                 </div>
+
+                <div class="form-row">
+                    <div class="form-col">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" placeholder="johnSmith@hotmail.com" required>
+                    </div>
+                    <div class="form-col">
+                        <label for="phone">Phone:</label>
+                        <input type="tel" id="phone" name="phoneNum" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="123-4567-8901" required>
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-col">
+                        <label for="password">Password:</label>
+                        <input type="password" id="password" name="password" required>
+                    </div>
+                    <div class="form-col">
+                        <label for="conPass">Confirm password:</label>
+                        <input type="password" id="conPass" name="conPass" required>
+                    </div>
+                </div>
+
+                <button type="submit" class="btn">Submit</button>
 
             </form>
         </div>
