fix button for gh pages

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="error"></div>
                 </div>
         
-                <button type="submit" class="submit">Submit</button>
+                <div type="submit" class="submit">Submit</div>
         
             </form>
         </div>
