--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h1 class="font h1">Registration</h1>
                 <h3 class="font h2">Fill in personal information below</h3>
             </div>
-            <form action="/" method="get" id="form" autocomplete="off">
+            <form action="/" method="post" id="form" autocomplete="off">
 
                 <div class="form-row">
                     <label for="fName" class="req">First name: </label>
